# fun_project_1

./: main.py  pyproject.toml  readme.md
docs/: conf.py
docs/_build/html/: index.html
rest_api/: __init__.py  base_app.py
rest_api/controllers/: users.py
rest_api/models/: __init__.py  comments.py  posts.py  users.py
services/: __init__.py
services/constants/: __init__.py  database.py  init_env_vars.py  rest_api_prefixes.py
services/database/: __init__.py  database_init.py
services/database/models/: users.py
services/exceptions/: __init__.py
services/exceptions/database/models/: users.py
services/rest_api/: __init__.py
services/rest_api/controllers/users/: create_user.py
services/schemes/: __init__.py  comments.py  posts.py  responses.py  users.py
tests/: __init__.py  conftest.py
tests/services/database/models/users/: test_create_user.py
